--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^25.6.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.2.0",
     "react-icons": "^5.5.0",
