--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
     "lucide-react": "^0.546.0",
