--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.12",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.1",
     "nodemon": "^2.0.22",
