--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.310",
     "react-router-dom": "^7.9.4",
+    "sweetalert2": "^11.26.3",
     "three": "^0.180.0"
   },
   "devDependencies": {
